--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 layout: default
 title: Home
 ---
-<!--<div class="wide" style="display: flex; align-items: center; flex-flow: wrap; justify-content:left;">-->
-<div class="wide" style="display: flex; flex-flow: wrap; justify-content:right">
+<div class="wide" style="display: flex; align-items: center; flex-flow: wrap; justify-content:left;">
+<!--<div class="wide" style="display: flex; flex-flow: wrap; justify-content:right">-->
     <span class="home-top"></span>
     <span class="home-title1">hello!</span>
     <br>
     <br>
     <span class="home-title2">I'm Ashley <span class="blue"> — </span></span>
-<!--    <img id="bio-prof-pic" src="/media/profile.jpg" style="justify-content: right">-->
-    <img style="float: right;" alt="" src="/media/profile.jpg">
+    <img id="bio-prof-pic" src="/media/profile.jpg" style="justify-content: right">
     <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
     <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6.8em">Let's get in touch</a>
     <span class="home-bottom"></span>
