--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
     <br>
     <br>
     <span class="home-title2">I'm Ashley <span class="blue"> — </span></span>
-    <img id="bio-prof-pic" src="/media/profile.jpg" style="justify-content: right">
+    <img id="bio-prof-pic" src="/media/profile.jpg">
     <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
     <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6.8em">Let's get in touch</a>
     <span class="home-bottom"></span>
@@ -34,15 +34,16 @@ title: Home
     <p class="project-descriptions">
         A <span class="blue">software engineering</span> internship turned <span class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end hospitality management system focused on helping students make the most of their housing.
         <br>
-        <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h4">See more</button>
+        <button style="width: 120px; height: 40px;" onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more</button>
     </p>
 </div>
 
+<!-- YDN Data Desk -->
+<br>
+<br>
+<br>
+<br>
 <div class="wide sep" style="margin-top: 1em">
-    <!-- YDN Data Desk -->
-    <br>
-    <br>
-    <br>
     <div class="project-title">
         Yale Daily News — Data
     </div>
