--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ title: Home
 <br>
 <br>
 <br>
+<br>
+<br>
 <div id="projects" class="wide sep" style="margin-top: 1em">
     <div class="project-title">
         ReRent
@@ -34,11 +36,13 @@ title: Home
     <p class="project-descriptions">
         A <span class="blue">software engineering</span> internship turned <span class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end hospitality management system focused on helping students make the most of their housing.
         <br>
-        <button style="width: 120px; height: 40px;" onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more</button>
+        <button style="width: 120px; height: 40px; align-items: center" onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more</button>
     </p>
 </div>
 
 <!-- YDN Data Desk -->
+<br>
+<br>
 <br>
 <br>
 <br>
@@ -54,18 +58,20 @@ title: Home
     </p>
     <p class="project-descriptions">
         <br>
-        <span class="blue">Data analyst</span> for the Yale Daily News. Extracting key insights and telling stories with data to make knowledge free and accessible for all.
+        <span class="blue">Data analyst</span> for the Yale Daily News. Cleaning, analyzing, and telling stories with data to make key insights free and accessible for all.
     </p>
     <br>
     <p class="project-descriptions">
-        Articles:
+        <b>
+            Articles:
+        </b>
     </p>
-    <li color="blue"><span>The shifting demographic makeup of Yale's athletic teams</span></li>
+    <li class="project-descriptions">The shifting demographic makeup of Yale's athletic teams</li>
     <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:400px;">
-    <button onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';" class="h4">See more</button>
+    <button style="width: 120px; height: 40px;" onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';" class="h4">See more</button>
     <br>
-    <li color="blue"><span>Class of 2020: By the numbers</span></li>
+    <li class="project-descriptions">Class of 2020: By the numbers</li>
     <img src="/media/ydncommencement.png" class="img_projects" alt="rerent" style="max-width:500px;">
-    <button onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';" class="h4">See more</button>
+    <button style="width: 120px; height: 40px;" onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';" class="h4">See more</button>
 </div>
 
