--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 layout: default
 title: Home
 ---
-<div class="wide" style="display: flex; align-items: center; flex-flow: wrap; justify-content:left;">
-<!--<div class="wide" style="display: flex; flex-flow: wrap; justify-content:right">-->
-    <span class="home-top"></span>
-    <span class="home-title1">hello!</span>
-    <br>
-    <br>
-    <span class="home-title2">I'm Ashley <span class="blue"> — </span></span>
-    <img id="bio-prof-pic" src="/media/profile.jpg">
-    <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
-    <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6.8em">Let's get in touch</a>
-    <span class="home-bottom"></span>
+<!--<div class="wide" style="display: flex; align-items: center; flex-flow: wrap; justify-content:left;">-->
+<div class="card container mx-auto px-2 mb-4 clearfix header-text">
+    <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
+        <div style="width: 30em; margin-bottom:3em;">
+            <span class="home-top"></span>
+            <span class="home-title1">hello!</span>
+            <br>
+            <br>
+            <span class="home-title2">I'm Ashley <span class="blue"> — </span></span>
+            <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
+            <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6.8em">Let's get in touch</a>
+            <span class="home-bottom"></span>
+        </div>
+        <img id="bio-prof-pic" src="/media/profile.jpg">
+    </div>
 </div>
 
 
@@ -32,11 +36,16 @@ title: Home
         <br>
         Summer 2020 — Present
     </p>
-    <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent" style="max-width:900px; margin-left: 50vw">
+    <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent"
+         style="max-width:900px; margin-left: 50vw">
     <p class="project-descriptions">
-        A <span class="blue">software engineering</span> internship turned <span class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end hospitality management system focused on helping students make the most of their housing.
+        A <span class="blue">software engineering</span> internship turned <span
+            class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end
+        hospitality management system focused on helping students make the most of their housing.
         <br>
-        <button style="width: 120px; height: 40px; align-items: center" onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more</button>
+        <button style="width: 120px; height: 40px; align-items: center"
+                onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more
+        </button>
     </p>
 </div>
 
@@ -58,7 +67,8 @@ title: Home
     </p>
     <p class="project-descriptions">
         <br>
-        <span class="blue">Data analyst</span> for the Yale Daily News. Cleaning, analyzing, and telling stories with data to make key insights free and accessible for all.
+        <span class="blue">Data analyst</span> for the Yale Daily News. Using data to tell stories and making
+        key insights free and accessible for all.
     </p>
     <br>
     <p class="project-descriptions">
@@ -68,10 +78,16 @@ title: Home
     </p>
     <li class="project-descriptions">The shifting demographic makeup of Yale's athletic teams</li>
     <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:400px;">
-    <button style="width: 120px; height: 40px;" onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';" class="h4">See more</button>
+    <button style="width: 120px; height: 40px;"
+            onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';"
+            class="h4">See more
+    </button>
     <br>
     <li class="project-descriptions">Class of 2020: By the numbers</li>
     <img src="/media/ydncommencement.png" class="img_projects" alt="rerent" style="max-width:500px;">
-    <button style="width: 120px; height: 40px;" onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';" class="h4">See more</button>
+    <button style="width: 120px; height: 40px;"
+            onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';"
+            class="h4">See more
+    </button>
 </div>
 
