--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 layout: default
 title: Home
 ---
-<!--<div class="wide" style="display: flex; align-items: center; flex-flow: wrap; justify-content:left;">-->
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
         <div style="width: 30em; margin-bottom:3em;">
@@ -28,66 +27,71 @@ title: Home
 <br>
 <br>
 <div id="projects" class="wide sep" style="margin-top: 1em">
-    <div class="project-title">
-        ReRent
-    </div>
-    <p>
-        Product Management | Software Development
-        <br>
-        Summer 2020 — Present
-    </p>
-    <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent"
-         style="max-width:900px; margin-left: 50vw">
-    <p class="project-descriptions">
-        A <span class="blue">software engineering</span> internship turned <span
-            class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end
-        hospitality management system focused on helping students make the most of their housing.
-        <br>
-        <button style="width: 120px; height: 40px; align-items: center"
-                onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more
-        </button>
-    </p>
-</div>
+    <div class="mx-auto mb-0 clearfix header-text" style="max-width: 80em;">
+        <div class="card grid">
+            <div class="one mt-3 mb-3">
+                <div class="project-title">
+                    ReRent
+                </div>
+                <p>
+                    Product Management | Software Development
+                    <br>
+                    Summer 2020 — Present
+                </p>
+                <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent"
+                     style="max-width:900px; margin-left: 50vw">
+                <p class="project-descriptions">
+                    A <span class="blue">software engineering</span> internship turned <span
+                        class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end
+                    hospitality management system focused on helping students make the most of their housing.
+                    <br>
+                    <button style="width: 120px; height: 40px; align-items: center"
+                            onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more
+                    </button>
+                </p>
+            </div>
+        </div>
 
-<!-- YDN Data Desk -->
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<div class="wide sep" style="margin-top: 1em">
-    <div class="project-title">
-        Yale Daily News — Data
+        <!-- YDN Data Desk -->
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="wide sep" style="margin-top: 1em">
+            <div class="project-title">
+                Yale Daily News — Data
+            </div>
+            <p>
+                Data Science
+                <br>
+                Spring 2020 — Present
+            </p>
+            <p class="project-descriptions">
+                <br>
+                <span class="blue">Data analyst</span> for the Yale Daily News. Using data to tell stories and making
+                key insights free and accessible for all.
+            </p>
+            <br>
+            <p class="project-descriptions">
+                <b>
+                    Articles:
+                </b>
+            </p>
+            <li class="project-descriptions">The shifting demographic makeup of Yale's athletic teams</li>
+            <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:400px;">
+            <button style="width: 120px; height: 40px;"
+                    onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';"
+                    class="h4">See more
+            </button>
+            <br>
+            <li class="project-descriptions">Class of 2020: By the numbers</li>
+            <img src="/media/ydncommencement.png" class="img_projects" alt="rerent" style="max-width:500px;">
+            <button style="width: 120px; height: 40px;"
+                    onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';"
+                    class="h4">See more
+            </button>
+        </div>
     </div>
-    <p>
-        Data Science
-        <br>
-        Spring 2020 — Present
-    </p>
-    <p class="project-descriptions">
-        <br>
-        <span class="blue">Data analyst</span> for the Yale Daily News. Using data to tell stories and making
-        key insights free and accessible for all.
-    </p>
-    <br>
-    <p class="project-descriptions">
-        <b>
-            Articles:
-        </b>
-    </p>
-    <li class="project-descriptions">The shifting demographic makeup of Yale's athletic teams</li>
-    <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:400px;">
-    <button style="width: 120px; height: 40px;"
-            onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';"
-            class="h4">See more
-    </button>
-    <br>
-    <li class="project-descriptions">Class of 2020: By the numbers</li>
-    <img src="/media/ydncommencement.png" class="img_projects" alt="rerent" style="max-width:500px;">
-    <button style="width: 120px; height: 40px;"
-            onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';"
-            class="h4">See more
-    </button>
 </div>
-
