--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
         <div style="width: 30em; margin-bottom:3em;">
-            <span class="home-top"></span>
+<!--            <span class="home-top"></span>-->
             <span class="home-title1">hello!</span>
             <br>
             <br>
