--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@ title: Home
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
         <div style="width: 30em; margin-bottom:3em;">
-<!--            <span class="home-top"></span>-->
             <span class="home-title1">hello!</span>
             <br>
             <br>
@@ -26,72 +25,72 @@ title: Home
 <br>
 <br>
 <br>
-<div id="projects" class="wide sep" style="margin-top: 1em">
-    <div class="mx-auto mb-0 clearfix header-text" style="max-width: 70em;">
-        <div class="card grid">
-            <div class="one mt-3 mb-3">
-                <div class="project-title">
-                    ReRent
-                </div>
-                <p>
-                    Product Management | Software Development
-                    <br>
-                    Summer 2020 — Present
-                </p>
-                <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent"
-                     style="max-width:900px; margin-left: 50vw">
-                <p class="project-descriptions">
-                    A <span class="blue">software engineering</span> internship turned <span
-                        class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end
-                    hospitality management system focused on helping students make the most of their housing.
-                    <br>
-                    <button style="width: 120px; height: 40px; align-items: center"
-                            onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more
-                    </button>
-                </p>
-            </div>
-        </div>
-
-        <!-- YDN Data Desk -->
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="wide sep" style="margin-top: 1em">
+<div class="card container mx-auto px-2 mb-4 clearfix header-text">
+    <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
+        <div id="projects" class="wide sep" style="margin-top: 1em">
             <div class="project-title">
-                Yale Daily News — Data
+                ReRent
             </div>
             <p>
-                Data Science
+                Product Management | Software Development
                 <br>
-                Spring 2020 — Present
+                Summer 2020 — Present
             </p>
+            <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent"
+                 style="max-width:900px; margin-left: 50vw">
             <p class="project-descriptions">
+                A <span class="blue">software engineering</span> internship turned <span
+                    class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end
+                hospitality management system focused on helping students make the most of their housing.
                 <br>
-                <span class="blue">Data analyst</span> for the Yale Daily News. Using data to tell stories and making
-                key insights free and accessible for all.
+                <button style="width: 120px; height: 40px; align-items: center"
+                        onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more
+                </button>
             </p>
-            <br>
-            <p class="project-descriptions">
-                <b>
-                    Articles:
-                </b>
-            </p>
-            <li class="project-descriptions">The shifting demographic makeup of Yale's athletic teams</li>
-            <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:400px;">
-            <button style="width: 120px; height: 40px;"
-                    onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';"
-                    class="h4">See more
-            </button>
-            <br>
-            <li class="project-descriptions">Class of 2020: By the numbers</li>
-            <img src="/media/ydncommencement.png" class="img_projects" alt="rerent" style="max-width:500px;">
-            <button style="width: 120px; height: 40px;"
-                    onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';"
-                    class="h4">See more
-            </button>
         </div>
     </div>
+</div>
+
+<!-- YDN Data Desk -->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="wide sep" style="margin-top: 1em">
+    <div class="project-title">
+        Yale Daily News — Data
+    </div>
+    <p>
+        Data Science
+        <br>
+        Spring 2020 — Present
+    </p>
+    <p class="project-descriptions">
+        <br>
+        <span class="blue">Data analyst</span> for the Yale Daily News. Using data to tell stories and making
+        key insights free and accessible for all.
+    </p>
+    <br>
+    <p class="project-descriptions">
+        <b>
+            Articles:
+        </b>
+    </p>
+    <li class="project-descriptions">The shifting demographic makeup of Yale's athletic teams</li>
+    <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:400px;">
+    <button style="width: 120px; height: 40px;"
+            onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';"
+            class="h4">See more
+    </button>
+    <br>
+    <li class="project-descriptions">Class of 2020: By the numbers</li>
+    <img src="/media/ydncommencement.png" class="img_projects" alt="rerent" style="max-width:500px;">
+    <button style="width: 120px; height: 40px;"
+            onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';"
+            class="h4">See more
+    </button>
+</div>
+</div>
 </div>
