--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
-        <div style="width: 30em; margin-bottom:3em;">
+        <div style="width: 35em; margin-bottom:5em;">
             <span class="home-title1">hello!</span>
             <br>
             <br>
@@ -36,17 +36,19 @@ title: Home
                 <br>
                 Summer 2020 — Present
             </p>
+            <div style="width: 60em; margin-bottom:5em;">
+                <p class="project-descriptions">
+                    A <span class="blue">software engineering</span> internship turned <span
+                        class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end
+                    hospitality management system focused on helping students make the most of their housing.
+                    <br>
+                    <button style="width: 120px; height: 40px; align-items: center"
+                            onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more
+                    </button>
+                </p>
+            </div>
             <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent"
                  style="max-width:900px; margin-left: 50vw">
-            <p class="project-descriptions">
-                A <span class="blue">software engineering</span> internship turned <span
-                    class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end
-                hospitality management system focused on helping students make the most of their housing.
-                <br>
-                <button style="width: 120px; height: 40px; align-items: center"
-                        onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more
-                </button>
-            </p>
         </div>
     </div>
 </div>
