--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: Home
                 <br>
                 Summer 2020 — Present
             </p>
-            <div style="width: 60em; margin-bottom:5em;">
+            <div style="width: 45em;">
                 <p class="project-descriptions">
                     A <span class="blue">software engineering</span> internship turned <span
                         class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end
@@ -47,8 +47,7 @@ title: Home
                     </button>
                 </p>
             </div>
-            <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent"
-                 style="max-width:900px; margin-left: 50vw">
+            <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent">
         </div>
     </div>
 </div>
