--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
-        <div style="width: 35em; margin-bottom:5em;">
+        <div style="width: 38em; margin-bottom:5em;">
             <span class="home-title1">hello!</span>
             <br>
             <br>
@@ -27,7 +27,7 @@ title: Home
 <br>
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
-        <div id="projects" class="wide sep" style="margin-top: 1em">
+        <div id="projects" class="wide sep" style="margin-top: 1em"></div>
             <div class="project-title">
                 ReRent
             </div>
@@ -48,7 +48,6 @@ title: Home
                 </p>
             </div>
             <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent">
-        </div>
     </div>
 </div>
 
