--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@ title: Home
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
         <div style="width: 38em; margin-bottom:5em;">
             <span class="home-title1">hello!</span>
-            <br>
-            <br>
             <span class="home-title2">I'm Ashley <span class="blue"> — </span></span>
             <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
             <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6.8em">Let's get in touch</a>
@@ -27,7 +25,7 @@ title: Home
 <br>
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
-        <div id="projects" class="wide sep" style="margin-top: 1em"></div>
+        <div id="projects" class="wide sep" style="margin-top: 1em">
             <div class="project-title">
                 ReRent
             </div>
@@ -48,6 +46,7 @@ title: Home
                 </p>
             </div>
             <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent">
+        </div>
     </div>
 </div>
 
