--- a/index.html
+++ b/index.html
@@ -34,19 +34,18 @@ title: Home
                 <br>
                 Summer 2020 — Present
             </p>
-            <div style="width: 45em;">
+            <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent">
+            <div style="width: 35em;">
                 <p class="project-descriptions">
                     A <span class="blue">software engineering</span> internship turned <span
                         class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end
                     hospitality management system focused on helping students make the most of their housing.
-                    <br>
-                    <button style="width: 120px; height: 40px; align-items: center"
-                            onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more
-                    </button>
                 </p>
+                <button style="width: 120px; height: 40px; align-items: center"
+                            onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more
+                </button>
             </div>
         </div>
-        <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent">
     </div>
 </div>
 
@@ -67,15 +66,12 @@ title: Home
         Spring 2020 — Present
     </p>
     <p class="project-descriptions">
-        <br>
-        <span class="blue">Data analyst</span> for the Yale Daily News. Using data to tell stories and making
+        <span class="blue">Data analyst</span> and <span class="blue">editor</span> for the Yale Daily News. Using data to tell stories and making
         key insights free and accessible for all.
     </p>
     <br>
     <p class="project-descriptions">
-        <b>
-            Articles:
-        </b>
+        Articles:
     </p>
     <li class="project-descriptions">The shifting demographic makeup of Yale's athletic teams</li>
     <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:400px;">
