--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ title: Home
                     hospitality management system focused on helping students make the most of their housing.
                 </p>
                 <button style="width: 120px; height: 40px; align-items: center"
-                            onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more
+                        onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">See more
                 </button>
             </div>
         </div>
@@ -56,36 +56,42 @@ title: Home
 <br>
 <br>
 <br>
-<div class="wide sep" style="margin-top: 1em">
-    <div class="project-title">
-        Yale Daily News — Data
+<div class="card container mx-auto px-2 mb-4 clearfix header-text">
+    <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
+        <div class="wide sep" style="margin-top: 1em">
+            <div class="project-title">
+                Yale Daily News — Data
+            </div>
+            <p>
+                Data Science
+                <br>
+                Spring 2020 — Present
+            </p>
+            <p class="project-descriptions">
+                <span class="blue">Data analyst</span> and <span class="blue">editor</span> for the Yale Daily News.
+                Telling stories with data and making
+                key insights free and accessible for all.
+            </p>
+            <br>
+            <div>
+                <p class="project-descriptions" style="font-size: 170%">
+                    Articles:
+                </p>
+                <li class="project-descriptions"><span>The shifting demographic makeup of Yale's athletic teams</span>
+                </li>
+                <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:400px;">
+                <button style="width: 120px; height: 40px;"
+                        onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';"
+                        class="h4">See more
+                </button>
+                <br>
+                <li class="project-descriptions"><span>Class of 2020: By the numbers</span></li>
+                <img src="/media/ydncommencement.png" class="img_projects" alt="rerent" style="max-width:500px;">
+                <button style="width: 120px; height: 40px;"
+                        onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';"
+                        class="h4">See more
+                </button>
+            </div>
+        </div>
     </div>
-    <p>
-        Data Science
-        <br>
-        Spring 2020 — Present
-    </p>
-    <p class="project-descriptions">
-        <span class="blue">Data analyst</span> and <span class="blue">editor</span> for the Yale Daily News. Using data to tell stories and making
-        key insights free and accessible for all.
-    </p>
-    <br>
-    <p class="project-descriptions">
-        Articles:
-    </p>
-    <li class="project-descriptions">The shifting demographic makeup of Yale's athletic teams</li>
-    <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:400px;">
-    <button style="width: 120px; height: 40px;"
-            onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';"
-            class="h4">See more
-    </button>
-    <br>
-    <li class="project-descriptions">Class of 2020: By the numbers</li>
-    <img src="/media/ydncommencement.png" class="img_projects" alt="rerent" style="max-width:500px;">
-    <button style="width: 120px; height: 40px;"
-            onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';"
-            class="h4">See more
-    </button>
-</div>
-</div>
 </div>
