--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@ title: Home
 <br>
 <br>
 <br>
-<div class="card container mx-auto px-2 mb-4 clearfix header-text">
-    <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
-        <div id="projects" class="wide sep" style="margin-top: 1em">
-            <div class="project-title">
-                ReRent
-            </div>
-            <p>
-                Product Management | Software Development
-                <br>
-                Summer 2020 — Present
-            </p>
-            <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent">
+<div id="projects" class="wide sep" style="margin-top: 1em">
+    <div class="project-title">
+        ReRent
+    </div>
+    <p>
+        Product Management | Software Development
+        <br>
+        Summer 2020 — Present
+    </p>
+    <div class="card container mx-auto px-2 mb-4 clearfix header-text">
+        <div class="subheader mt-1 py-2"
+             style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
             <div style="width: 35em;">
                 <p class="project-descriptions">
                     A <span class="blue">software engineering</span> internship turned <span
@@ -46,6 +46,7 @@ title: Home
                     Read more
                 </button>
             </div>
+            <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent">
         </div>
     </div>
 </div>
@@ -74,8 +75,8 @@ title: Home
                 key insights free and accessible for all.
             </p>
             <button style="width: 120px; height: 40px; align-items: center"
-                        onclick="window.location.href = 'https://ashleyqin.com/ydn';" class="h2">
-                    Read more
+                    onclick="window.location.href = 'https://ashleyqin.com/ydn';" class="h2">
+                Read more
             </button>
             <br>
             <div>
