--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ title: Home
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
         <div style="width: 38em; margin-bottom:5em;">
             <span class="home-title1">hello!</span>
-            <span class="home-title2">I'm Ashley <span class="blue"> — </span></span>
-            <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
+            <span class="home-title2">I'm Ashley</span>
+            <span class="home-subtitle"><span class="blue">developer</span>, <span class="blue">researcher</span>, and <span class="blue">bioengineering</span> student at Yale. Passionate about using data to build products and promote equity.</span>
             <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6.8em">Let's get in touch</a>
             <span class="home-bottom"></span>
         </div>
@@ -36,11 +36,11 @@ title: Home
         <div class="subheader mt-1 py-2"
              style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
             <div style="width: 35em;">
-                <p class="project-descriptions">
+<!--                <p class="project-descriptions">-->
                     A <span class="blue">software engineering</span> internship turned <span
                         class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end
                     hospitality management system focused on helping students make the most of their housing.
-                </p>
+<!--                </p>-->
                 <button style="width: 120px; height: 40px; align-items: center"
                         onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">
                     Read more
