--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
             <span class="home-title1">hello!</span>
             <span class="home-title2">I'm Ashley</span>
             <span class="home-subtitle"><span class="blue">developer</span>, <span class="blue">researcher</span>, and <span class="blue">bioengineering</span> student at Yale. Passionate about using <span class="blue">data</span> to build products and promote equity.</span>
-            <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6.8em">Let's get in touch</a>
+            <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6.3em">Let's get in touch</a>
             <span class="home-bottom"></span>
         </div>
         <img id="bio-prof-pic" src="/media/profile.jpg">
@@ -16,7 +16,7 @@ title: Home
 </div>
 
 <div class="work">
-    work<span class="blue" style="font-size: 400%">.</span>
+    <span class="blue" style="font-size: 400%">.</span>work<span class="blue" style="font-size: 400%">.</span>
 </div>
 
 
