--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@ title: Home
                     Read more
                 </button>
             </div>
-            <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent">
+            <div style="text-align: right">
+                <img src="/media/rerent_mockup.png" alt="rerent">
+            </div>
         </div>
     </div>
 </div>
@@ -84,8 +86,8 @@ title: Home
             </button>
 <!--            <br>-->
             <div>
-                <p class="project-descriptions" style="font-size: 170%">
-                    Articles:
+                <p style="font-size: 170%">
+                    Selected Articles:
                 </p>
                 <ul>
                     <li class="project-descriptions">
@@ -94,7 +96,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:400px;">
+                <img src="/media/ydnheatmap.png" class="img_dataprojects" alt="rerent" style="max-width:400px;">
                 <br>
                 <ul>
                     <li class="project-descriptions">
@@ -103,7 +105,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <img src="/media/ydncommencement.png" class="img_projects" alt="rerent" style="max-width:500px;">
+                <img src="/media/ydncommencement.png" class="img_dataprojects" alt="rerent" style="max-width:500px;">
             </div>
         </div>
     </div>
