--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
             <span class="home-title1">hello!</span>
             <span class="home-title2">I'm Ashley</span>
             <span class="home-subtitle"><span class="blue">developer</span>, <span class="blue">researcher</span>, and <span class="blue">bioengineering</span> student at Yale. Passionate about using <span class="blue">data</span> to build products and promote equity.</span>
-            <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6.3em">Let's get in touch</a>
+            <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: auto">Let's get in touch</a>
             <span class="home-bottom"></span>
         </div>
         <img id="bio-prof-pic" src="/media/profile.jpg">
@@ -16,7 +16,7 @@ title: Home
 </div>
 
 <div class="work">
-    <span class="blue" style="font-size: 400%">.</span>work<span class="blue" style="font-size: 400%">.</span>
+    <span class="blue" style="font-size: 400%">.</span>projects<span class="blue" style="font-size: 400%">.</span>
 </div>
 
 
@@ -39,20 +39,18 @@ title: Home
     <div class="card container mx-auto px-2 mb-4 clearfix header-text">
         <div class="subheader mt-1 py-2"
              style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
-            <div style="width: 35em;">
-                <p class="project-descriptions">
+            <div style="width: 30em;">
+                <span class="project-descriptions">
                     A <span class="blue">software engineering</span> internship turned <span
                         class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end
                     hospitality management system focused on helping students make the most of their housing.
-                </p>
-                <button style="width: 120px; height: 40px; align-items: center"
+                </span>
+            </div>
+            <img src="/media/rerent_mockup.png" alt="rerent">
+            <button style="width: 120px; height: 40px; align-items: center"
                         onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">
                     Read more
-                </button>
-            </div>
-            <div style="text-align: right">
-                <img src="/media/rerent_mockup.png" alt="rerent">
-            </div>
+            </button>
         </div>
     </div>
 </div>
@@ -84,9 +82,9 @@ title: Home
                     onclick="window.location.href = 'https://ashleyqin.com/ydn';" class="h2">
                 Read more
             </button>
-<!--            <br>-->
+            <br>
             <div>
-                <p style="font-size: 170%">
+                <p style="font-size: 200%">
                     Selected Articles:
                 </p>
                 <ul>
