--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ title: Home
             </button>
             <br>
             <div>
-                <p style="font-size: 200%">
+                <p style="font-size: 200%; margin-top: 2em;">
                     Selected Articles:
                 </p>
                 <ul>
