--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@ title: Home
     </p>
     <div class="card container mx-auto px-2 mb-4 clearfix header-text">
         <div class="subheader mt-1 py-2"
-             style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
+             style="display: inline-block;align-items: center;flex-flow: wrap; justify-content:center;">
             <div style="width: 30em;">
                 <span class="project-descriptions">
                     A <span class="blue">software engineering</span> internship turned <span
                         class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end
                     hospitality management system focused on helping students make the most of their housing.
                 </span>
-            </div>
-            <img src="/media/rerent_mockup.png" alt="rerent">
-            <button style="width: 120px; height: 40px; align-items: center"
+                <button style="width: 120px; height: 40px; align-items: center"
                         onclick="window.location.href = 'https://ashleyqin.com/rerent';" class="h2">
                     Read more
-            </button>
+                </button>
+            </div>
+            <img src="/media/rerent_mockup.png" alt="rerent">
         </div>
     </div>
 </div>
@@ -73,12 +73,13 @@ title: Home
                 <br>
                 Spring 2020 — Present
             </p>
+            <br>
             <p class="project-descriptions">
                 <span class="blue">Data analyst</span> and <span class="blue">editor</span> for the Yale Daily News.
                 Telling stories with data and making
                 key insights free and accessible for all.
             </p>
-            <button style="width: 120px; height: 40px; align-items: center; margin-bottom: 2em"
+            <button style="width: 120px; height: 40px; align-items: center; margin-bottom: 3em"
                     onclick="window.location.href = 'https://ashleyqin.com/ydn';" class="h2">
                 Read more
             </button>
