--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@ title: Home
         Summer 2020 — Present
     </p>
     <div class="card container mx-auto px-2 mb-4 clearfix header-text">
-        <div class="subheader mt-1 py-2"
-             style="display: inline-block;align-items: center;flex-flow: wrap; justify-content:center;">
+        <div class="subheader mt-1 py-2" style="display: inline-block;align-items: center;flex-flow: wrap; justify-content:center;">
             <div style="width: 30em;">
                 <span class="project-descriptions">
                     A <span class="blue">software engineering</span> internship turned <span
@@ -50,7 +49,7 @@ title: Home
                     Read more
                 </button>
             </div>
-            <img src="/media/rerent_mockup.png" alt="rerent">
+            <img src="/media/rerent_mockup.png" alt="rerent" style="justify-content: right !important;">
         </div>
     </div>
 </div>
@@ -96,6 +95,8 @@ title: Home
                     </li>
                 </ul>
                 <img src="/media/ydnheatmap.png" class="img_dataprojects" alt="rerent" style="max-width:400px;">
+                <br>
+                <br>
                 <br>
                 <ul>
                     <li class="project-descriptions">
