--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: Home
         Summer 2020 — Present
     </p>
     <div class="card container mx-auto px-2 mb-4 clearfix header-text">
-        <div style="width: 30%; float:left">
+        <div style="width: 50%; float:left; margins:0 px !important; overflow:hidden !important;">
             <textbox>
             <span class="project-descriptions">
                 A <span class="blue">software engineering</span> internship turned <span
@@ -52,7 +52,7 @@ title: Home
                 </button>
             </textbox>
         </div>
-        <div style="width: 70%; float:right">
+        <div style="width: 50%; float:right; margins:0 px !important; overflow:hidden !important;">
             <img src="/media/rerent_mockup.png" alt="rerent">
         </div>
     </div>
