--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ title: Home
                 </button>
             </textbox>
         </div>
-        <div style="width: 50%; float:right; margins:0 px !important; overflow:hidden !important;">
+        <div style="justify-content: right">
             <img src="/media/rerent_mockup.png" alt="rerent">
         </div>
     </div>
