--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@ title: Home
         <br>
         Summer 2020 — Present
     </p>
-    <div class="card container mx-auto px-2 mb-4 clearfix header-text">
-        <div style="width: 50%; float:left; margins:0 px !important; overflow:hidden !important;">
+<!--    <div class="card container mx-auto px-2 mb-4 clearfix header-text">-->
+    <div class="card grid">
+        <div class="one mt-3 mb-3">
+<!--        <div style="width: 50%; float:left; margins:0 px !important; overflow:hidden !important;">-->
             <textbox>
             <span class="project-descriptions">
                 A <span class="blue">software engineering</span> internship turned <span
@@ -52,11 +54,12 @@ title: Home
                 </button>
             </textbox>
         </div>
-        <div style="justify-content: right">
+        <div style="justify-content: right; margin-left: 4em;">
             <img src="/media/rerent_mockup.png" alt="rerent">
         </div>
     </div>
 </div>
+<!--</div>-->
 
 <!-- YDN Data Desk -->
 <br>
