--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ title: Home
         Summer 2020 — Present
     </p>
 <!--    <div class="card container mx-auto px-2 mb-4 clearfix header-text">-->
+    <div class="mx-auto mb-0 clearfix header-text" style="max-width: 80em;">
     <div class="card grid">
         <div class="one mt-3 mb-3">
 <!--        <div style="width: 50%; float:left; margins:0 px !important; overflow:hidden !important;">-->
@@ -58,6 +59,7 @@ title: Home
             <img src="/media/rerent_mockup.png" alt="rerent">
         </div>
     </div>
+</div>
 </div>
 <!--</div>-->
 
