--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ title: Home
                 </button>
             </textbox>
         </div>
-        <div style="justify-content: right; margin-left: 4em;">
+        <div class="two">
             <img src="/media/rerent_mockup.png" alt="rerent">
         </div>
     </div>
