get a sense of divs

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ title: Home
             <span class="home-title1">hello!</span>
             <span class="home-title2">I'm Ashley</span>
             <span class="home-subtitle"><span class="blue">developer</span>, <span
-                    class="blue">researcher</span>, and <span class="blue">bioengineering</span> student at Yale. Passionate about using <span
-                    class="blue">data</span> to build products and promote equity.</span>
+                    class="blue">researcher</span>, and <span class="blue">bioengineering</span> student at Yale. Passionate about merging <span
+                    class="blue">software</span> and <span class="blue">science</span>.</span>
             <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: auto">Let's get in touch</a>
             <span class="home-bottom"></span>
         </div>
@@ -41,12 +41,12 @@ title: Home
 
     <div class="mx-auto mb-0 clearfix header-text" style="max-width: 80em;">
         <div class="card grid">
-            <div class="one mt-3 mb-3">
+            <div class="one mt-3 mb-3" style="background-color: red">
                 <textbox>
             <span class="project-descriptions">
                 A <span class="blue">software engineering</span> internship turned <span
                     class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end
-                    hospitality management system focused on helping students make the most of their housing.
+                    hospitality management system that helps college students rent out their places while they’re away on breaks.
                 </span>
                     <button style="width: 120px; height: 40px; align-items: center; margin-top: 0.7em"
                             onclick="window.location.href = '/rerent.html';" class="h2">
@@ -54,7 +54,7 @@ title: Home
                     </button>
                 </textbox>
             </div>
-            <div class="two">
+            <div style="background-color: yellow">
                 <img src="/media/rerent_mockup.png" alt="rerent">
             </div>
         </div>
