--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: Home
         Summer 2020 — Present
     </p>
 
-    <div class="mx-auto mb-0 clearfix header-text" style="max-width: 80em;">
+    <div class="mx-auto mb-0 clearfix header-text" style="max-width: 80em; background-color: gray">
         <div class="card grid">
             <div class="one mt-3 mb-3" style="background-color: red">
                 <textbox>
@@ -54,7 +54,7 @@ title: Home
                     </button>
                 </textbox>
             </div>
-            <div style="background-color: yellow">
+            <div style="background-color: yellow; size: 80%">
                 <img src="/media/rerent_mockup.png" alt="rerent">
             </div>
         </div>
