--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Home
             <span class="home-subtitle"><span class="blue">developer</span>, <span
                     class="blue">researcher</span>, and <span class="blue">bioengineering</span> student at Yale. Passionate about merging <span
                     class="blue">software</span> and <span class="blue">science</span>.</span>
-            <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: auto">Let's get in touch</a>
+            <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: auto"><span style="color: white">Let's get in touch</span></a>
             <span class="home-bottom"></span>
         </div>
         <img id="bio-prof-pic" src="/media/profile.jpg">
@@ -18,7 +18,8 @@ title: Home
 </div>
 
 <div class="work">
-    <span class="blue" style="font-size: 400%">.</span>projects<span class="blue" style="font-size: 400%">.</span>
+<!--    <span class="blue" style="font-size: 400%">.</span>projects<span class="blue" style="font-size: 400%">.</span>-->
+    <span style="background: #33CAFF; color: white">projects</span>
 </div>
 
 
@@ -36,7 +37,7 @@ title: Home
     <p>
         Product Management | Software Development
         <br>
-        Summer 2020 — Present
+        June 2020 — Present
     </p>
 
     <div class="mx-auto mb-0 clearfix header-text" style="max-width: 80em; background-color: gray">
@@ -78,7 +79,7 @@ title: Home
             <p>
                 Data Science
                 <br>
-                Spring 2020 — Present
+                August 2019 — Present
             </p>
             <p class="project-descriptions" style="width: 30em">
                 <span class="blue">Data analyst</span> and <span class="blue">editor</span> for the Yale Daily News.
