--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Home
 
 <div class="work">
 <!--    <span class="blue" style="font-size: 400%">.</span>projects<span class="blue" style="font-size: 400%">.</span>-->
-    <span style="background: #33CAFF; color: white">projects</span>
+    <span>projects</span>
 </div>
 
 
