--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Home
             <span class="home-subtitle"><span class="blue">developer</span>, <span
                     class="blue">researcher</span>, and <span class="blue">bioengineering</span> student at Yale. Passionate about merging <span
                     class="blue">software</span> and <span class="blue">science</span>.</span>
-            <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: auto"><span style="color: white">Let's get in touch</span></a>
+            <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: auto">Let's get in touch <span class="blue">&rarr;</span></a>
             <span class="home-bottom"></span>
         </div>
         <img id="bio-prof-pic" src="/media/profile.jpg">
@@ -18,7 +18,6 @@ title: Home
 </div>
 
 <div class="work">
-<!--    <span class="blue" style="font-size: 400%">.</span>projects<span class="blue" style="font-size: 400%">.</span>-->
     <span>projects</span>
 </div>
 
