--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Home
     </div>
 </div>
 
-<div class="work">
+<div id="projects" class="work">
     <span>projects</span>
 </div>
 
@@ -29,7 +29,7 @@ title: Home
 <br>
 <br>
 <br>
-<div id="projects" class="wide sep" style="margin-top: 1em">
+<div class="wide sep" style="margin-top: 1em">
     <div class="project-title">
         ReRent
     </div>
