more underlining adjustments

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ title: Home
         <br>
         June 2020 — Present
     </p>
+</div>
 
 <!--    <div class="mx-auto mb-0 clearfix header-text" style="max-width: 80em">-->
 <!--        <div class="card grid">-->
@@ -50,18 +51,15 @@ title: Home
                     class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end
                     hospitality management system that helps college students rent out their places while they’re away on breaks.
                 </span>
-                    <button style="width: 120px; height: 40px; align-items: center; margin-top: 0.7em" class="h2">
-                        <a href = 'about/rerent.html'>
-                            Read more
-                        </a>
-                    </button>
+                <a href = 'about/rerent.html'>Read more </a><span class="blue">&rarr;</span>
+                <span class="home-bottom"></span>
             </div>
 <!--            <div style="background-color: yellow; size: 80%;">-->
             <img src="/media/rerent_mockup.png" alt="rerent">
 <!--            </div>-->
         </div>
     </div>
-</div>
+<!--</div>-->
 
 <!-- YDN Data Desk -->
 <br>
