--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ title: Home
             <span class="home-subtitle"><span class="blue">developer</span>, <span
                     class="blue">researcher</span>, and <span class="blue">bioengineering</span> student at Yale. Passionate about merging <span
                     class="blue">software</span> and <span class="blue">science</span>.</span>
-            <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: auto">Let's get in touch </a><span class="blue">&rarr;</span>
+            <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: auto">Let's get in touch </a><span
+                class="blue">&rarr;</span>
             <span class="home-bottom"></span>
         </div>
         <img id="bio-prof-pic" src="/media/profile.jpg">
@@ -39,10 +40,6 @@ title: Home
         June 2020 — Present
     </p>
 </div>
-
-<!--    <div class="mx-auto mb-0 clearfix header-text" style="max-width: 80em">-->
-<!--        <div class="card grid">-->
-<!--            <div class="one mt-3 mb-3" style="background-color: red;">-->
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
         <div style="width: 38em; margin-bottom:5em;">
@@ -53,12 +50,9 @@ title: Home
             <a href='about/rerent.html'>Read more </a><span class="blue">&rarr;</span>
             <span class="home-bottom"></span>
         </div>
-        <!--            <div style="background-color: yellow; size: 80%;">-->
         <img class="img_projects" src="/media/rerent_mockup.png" alt="rerent">
-        <!--            </div>-->
     </div>
 </div>
-<!--</div>-->
 
 <!-- YDN Data Desk -->
 <br>
@@ -98,8 +92,37 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <img src="/media/ydnheatmap.png" class="img_dataprojects" alt="ydn international athletics"
-                     style="max-width:400px; margin-bottom: 1em">
+                <div class='tableauPlaceholder' id='viz1600286215547' style='position: center'>
+                    <noscript><a
+                            href='http:&#47;&#47;features.yaledailynews.com&#47;blog&#47;2020&#47;04&#47;24&#47;analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis&#47;'><img
+                            alt=' '
+                            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;YD&#47;YDN_international_athletes&#47;Sheet7&#47;1_rss.png'
+                            style='border: none'/></a></noscript>
+                    <object class='tableauViz' style='display:none;'>
+                        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F'/>
+                        <param name='embed_code_version' value='3'/>
+                        <param name='site_root' value=''/>
+                        <param name='name' value='YDN_international_athletes&#47;Sheet7'/>
+                        <param name='tabs' value='no'/>
+                        <param name='toolbar' value='yes'/>
+                        <param name='static_image'
+                               value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;YD&#47;YDN_international_athletes&#47;Sheet7&#47;1.png'/>
+                        <param name='animate_transition' value='yes'/>
+                        <param name='display_static_image' value='yes'/>
+                        <param name='display_spinner' value='yes'/>
+                        <param name='display_overlay' value='yes'/>
+                        <param name='display_count' value='yes'/>
+                    </object>
+                </div>
+                <script type='text/javascript'>
+                    var divElement = document.getElementById('viz1600286215547');
+                    var vizElement = divElement.getElementsByTagName('object')[0];
+                    vizElement.style.width = '100%';
+                    vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+                    var scriptElement = document.createElement('script');
+                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+                    vizElement.parentNode.insertBefore(scriptElement, vizElement);
+                </script>
                 <br>
                 <br>
                 <br>
@@ -111,8 +134,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <!--                <img src="/media/ydncommencement.png" class="img_dataprojects" alt="ydn commencement" style="max-width:500px;">-->
-                <div class='tableauPlaceholder' id='viz1600266083672' style='position: relative'>
+                <div class='tableauPlaceholder' id='viz1600266083672' style='position: center'>
                     <noscript><a
                             href='https:&#47;&#47;yaledailynews.com&#47;commencement2020&#47;2020&#47;05&#47;15&#47;yale-class-of-2020-by-the-numbers&#47;'><img
                             alt=' '
