centering + abstract pictures

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <div class='tableauPlaceholder' id='viz1600286215547' style='position: center'>
+                <div class='tableauPlaceholder' id='viz1600286215547' style='position: center; background: yellow'>
                     <noscript><a
                             href='http:&#47;&#47;features.yaledailynews.com&#47;blog&#47;2020&#47;04&#47;24&#47;analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis&#47;'><img
                             alt=' '
@@ -179,47 +179,58 @@ title: Home
 <br>
 <br>
 <br>
-<div class="wide sep" style="margin-top: 1em">
-    <div class="project-title">
-        Research/Publications
-    </div>
-    <p>
-        Research
-    </p>
-    <div class="card container mx-auto px-2 mb-4 clearfix header-text">
-        <div class="subheader mt-1 py-2" style="align-items: center;flex-flow: wrap; justify-content:center;">
-            <div style="width: 30em; display: inline-block;">
-                <span class="project-descriptions">
-                    DESCRIPTION OF ABSTRACT 1
-                </span>
-                <button style="width: 120px; height: 40px; align-items: center"
-                        onclick="window.location.href = 'https://ashpublications.org/blood/article/134/Supplement_1/1230/426742/U2AF1-Driver-Mutations-in-Hematopoietic-Disorders?searchresult=1';"
-                        class="h2">
-                    Read abstract
-                </button>
+<div class="card container mx-auto px-2 mb-4 clearfix header-text">
+    <div class="subheader mt-1 py-2"
+         style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
+        <div class="wide sep" style="margin-top: 1em">
+            <div class="project-title">
+                Research/Publications
             </div>
-            <div style="width: 30em; display: inline-block;">
-                <span class="project-descriptions">
-                    DESCRIPTION OF ABSTRACT 2
-                </span>
-                <button style="width: 120px; height: 40px; align-items: center"
-                        onclick="window.location.href = 'https://ashpublications.org/blood/article/134/Supplement_1/338/426253/In-Vivo-reconstruction-of-Human-Erythropoiesis?searchresult=1';"
-                        class="h2">
-                    Read abstract
-                </button>
+            <p>
+                Bioinformatics
+                <br>
+                August 2019 — Present
+            </p>
+            <p class="project-descriptions" style="width: 30em">
+                Student <span class="blue">researcher</span>. Previously at Prof. Stephanie Halene's lab (Yale), now working at
+                Prof. Xihong Lin's lab (Harvard).
+            </p>
+            <br>
+            <div>
+                <p style="font-size: 200%; margin-top: 2em; margin-bottom: 1em">
+                    Published work:
+                </p>
+                <ul style="margin-left: 3em">
+                    <li>
+                        <a href="https://ashpublications.org/blood/article/134/Supplement_1/1230/426742/U2AF1-Driver-Mutations-in-Hematopoietic-Disorders?searchresult=1"
+                            style="font-size: 110%">
+                            Read abstract <span class="blue">&rarr;</span>
+                        </a>
+                    </li>
+                </ul>
+                <img src="/media/abstract1.png.png" class="img_dataprojects" alt="ASH-ley abstracts 1"
+                     style="max-width:400px;">
+                <ul style="margin-left: 3em">
+                    <li>
+                        <a href="https://ashpublications.org/blood/article/134/Supplement_1/338/426253/In-Vivo-reconstruction-of-Human-Erythropoiesis?searchresult=1"
+                            style="font-size: 110%">
+                            Read abstract <span class="blue">&rarr;</span>
+                        </a>
+                    </li>
+                </ul>
+                <img src="/media/abstract2.png.png" class="img_dataprojects" alt="ASH-ley abstracts 2"
+                     style="max-width:400px;">
+                <ul style="margin-left: 3em">
+                    <li>
+                        <a href="https://ashpublications.org/blood/article/134/Supplement_1/4222/425718/PARP-Inhibitors-Are-Effective-in-IDH1-2-Mutant-MDS?searchresult=1"
+                            style="font-size: 110%">
+                            Read abstract <span class="blue">&rarr;</span>
+                        </a>
+                    </li>
+                </ul>
+                <img src="/media/abstract3.png.png" class="img_dataprojects" alt="ASH-ley abstracts 3"
+                     style="max-width:400px;">
             </div>
-            <div style="width: 30em; display: inline-block;">
-                <span class="project-descriptions">
-                    DESCRIPTION OF ABSTRACT 3
-                </span>
-                <button style="width: 120px; height: 40px; align-items: center"
-                        onclick="window.location.href = 'https://ashpublications.org/blood/article/134/Supplement_1/4222/425718/PARP-Inhibitors-Are-Effective-in-IDH1-2-Mutant-MDS?searchresult=1';"
-                        class="h2">
-                    Read abstract
-                </button>
-            </div>
-            <img src="/media/ash.png" alt="ASHley's abstracts (haha get it)"
-                 style="justify-content: right !important; display: inline-block;">
         </div>
     </div>
 </div>
